# give

./: .gitattributes  .gitignore  AUTHORS  COPYING  Configure.linux  INSTALL  LICENSE  Makefile  Makefile.in  README  README.md  aclocal.m4  autogen.sh  common.mk  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  dox_config  give-assist.c  give.1  give.3.1-4.tgz  give.py  give.py.in  give.spec  installed-manifest  libtool  rpm-config.xml  take.1
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile.in
doc/man/: Makefile.am  Makefile.in
doc/man/man1/: give.1
html/: files.html  give-assist_8c.html  give_8py.html  give_8py_8in.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  namespacegive.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html
legacy/: give-3.0n-2.tar
legacy/give-3.0n-2/: ChangeLog  INSTALL  META  README.stg  give-assist.c  give.py  setup  take.1
legacy/give-3.0n-2/string_m/: Makefile  Makefile.msvc  ReadMe.txt  constraint.c  fprintf_internal.h  scanf_internals.h  string_m.h  stringtest.sln  stringtest.vcproj  strslice_m.c
m4/: lx_check_all_gids.m4  lx_set_give_dir.m4  lx_set_givedir.m4  lx_set_strict_checks.m4  lx_specify_gid.m4  lx_uid_perm_only.m4
src/: Makefile.am  Makefile.in  give-assist.c
src/string_m/: Makefile.am  Makefile.in  constraint.h  fscanf_m.c  getstr_m.c  makestr.c  printf_m.c  sprintf_m.c  sscanf_m.c  strdelete_m.c  strdup_m.c  string_m.h  string_m_internals.h  strlen_m.c  strspn_m.c  strtest.c  test.c
string_m/: Configure.linux  Makefile.osx  README.stg  ReadMe.txt  fprintf_m.c  fscanf_m.c  scanf_internals.h  sprintf_internal.h  strcat_m.c  strcmp_m.c  strcpy_m.c  strdup_m.c  stringtest.ncb  stringtest.sln  stringtest.vcproj  strtok_m.c  test.ans  test.c
