noinst_LIBRARIES = lib_string_m.a

lib_string_m_a_CFLAGS = -I$(top_srcdir)/string_m
lib_string_m_a_SOURCES = getstr_m.c makestr.c sprintf_m.c strcat_m.c strcpy_m.c strdelete_m.c strdup_m.c strlen_m.c strtest.c strtok_m.c strslice_m.c strspn_m.c constraint.c strcmp_m.c  fprintf_m.c fscanf_m.c printf_m.c sscanf_m.c
lib_string_m_a_CPPFLAGS = -I$(top_srcdir)/src/string_m
